Changelog
=========

1.1 (unreleased)
----------------
   
   * Code cleanup.
      [thet]

1.0 (2009-12-04)
-----------------

    * Fix order of providers [lucmult]
    * Improve styles [tamosauskas]

0.9 (2009-08-15)
-----------------

    * Moves code to svn.plone.org/svn/collective/sc.social.bookmarks/
      [erico_andrei]

0.8 (2009-05-18)
----------------

    * Fixes an annoying issue with dancing divs
      [tamosauskas]

0.7 (2009-04-15)
----------------
    
    * Fixes string formatting error in providers without all parameters mapped
      [erico_andrei]
      
    * Adds a condition to avoid displaying bookmark action on content types not
      configured to enabled it
      [erico_andrei]

0.6 (2009-04-07)
----------------

   * Support for ordering selected providers
     [erico_andrei]

   * Improvement on Control Panel usability, using new widgets
     [erico_andrei]
     
   * Adds myspace icon
     [tamosauskas]
   
   
0.5 (2009-02-27)
----------------

   * Initial Public Release to PyPi and Plone.org
     [erico_andrei]
     
   * Very basic i18n support
     [erico_andrei]
     
   * Styling and css
     [tamosauskas]
   
   * KSS-enabled document action
     [tamosauskas]
   
   * Filtering of content types
     [erico_andrei]
   
   * Support for a fixed set of bookmarks providers
     [erico_andrei]
   
   * Initial release
     