@@ -1,0 +1,33 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="context/main_template/macros/master"
+      i18n:domain="sc.social.bookmarks">
+<body>
+<metal:content-core fill-slot="content-core">
+<metal:block define-macro="content-core">
+
+    <metal:macro define-macro="bookmarks"> 
+    <h4 i18n:translate="">Bookmark &amp; Share:</h4>
+    <ul id="viewlet_bookmarks"
+        tal:define="portal_url context/@@plone_portal_state/portal_url">
+        <li tal:repeat="provider view/providers">
+            <a href="" tal:attributes="href provider/url">
+                <img src="" 
+                     tal:attributes="src string:${portal_url}/++resource++sb_images/${provider/logo}; alt string:${provider/id}" />
+                &nbsp;
+                <span tal:replace="provider/id">reddit</span>
+            </a>
+        </li>
+    </ul>
+    <div class="visualClear"></div>
+    </metal:macro>
+
+</metal:block>
+</metal:content-core>
+</body>
+</html>
+
+
