@@ -1,17 +1,21 @@
 <object name="portal_actions" meta_type="Plone Actions Tool"
-   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
- <object name="document_actions" meta_type="CMF Action Category">
-  <object name="socialBookmark" meta_type="CMF Action" i18n:domain="plone">
-   <property name="title" i18n:translate="">Bookmark</property>
-   <property name="description"
-      i18n:translate="">Bookmark this content</property>
-   <property name="url_expr">string:$object_url/#</property>
-   <property name="icon_expr"></property>
-   <property name="available_expr">object/@@social_bookmarks_view/enabled</property>
-   <property name="permissions">
-    <element value="View"/>
-   </property>
-   <property name="visible">True</property>
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+
+  <object name="document_actions" meta_type="CMF Action Category">
+
+    <object name="socialBookmark" meta_type="CMF Action" i18n:domain="plone">
+      <property name="title" i18n:translate="">Bookmark</property>
+      <property name="description"
+          i18n:translate="">Bookmark this content</property>
+      <property name="url_expr">string:$object_url/@@social_bookmarks_view</property>
+      <property name="icon_expr"></property>
+      <property name="available_expr">object/@@social_bookmarks_view/enabled</property>
+      <property name="permissions">
+        <element value="View"/>
+      </property>
+      <property name="visible">True</property>
+    </object>
+
   </object>
- </object>
+
 </object>
